# sendinblue-v3

./: Cargo.toml  README.md
.openapi-generator/: FILES
docs/: AbTestCampaignResult.md  AbTestCampaignResultClickedLinks.md  AbTestCampaignResultStatistics.md  AbTestVersionClicksInner.md  AbTestVersionStats.md  AccountApi.md  AddChildDomain.md  AddContactToList.md  AddCredits.md  AttributesApi.md  BlockDomain.md  ContactsApi.md  CreateAttribute.md  CreateAttributeEnumerationInner.md  CreateChild.md  CreateContact.md  CreateDoiContact.md  CreateEmailCampaign.md  CreateEmailCampaignRecipients.md  CreateEmailCampaignSender.md  CreateList.md  CreateModel.md  CreateReseller.md  CreateSender.md  CreateSenderIpsInner.md  CreateSenderModel.md  CreateSmsCampaign.md  CreateSmsCampaignRecipients.md  CreateSmtpEmail.md  CreateSmtpTemplate.md  CreateSmtpTemplateSender.md  CreateUpdateContactModel.md  CreateUpdateFolder.md  CreateWebhook.md  CreatedProcessId.md  DeleteHardbounces.md  EmailCampaignsApi.md  EmailExportRecipients.md  ErrorModel.md  FoldersApi.md  (+177 more)
src/apis/: account_api.rs  attributes_api.rs  configuration.rs  contacts_api.rs  email_campaigns_api.rs  folders_api.rs  lists_api.rs  mod.rs  process_api.rs  reseller_api.rs  senders_api.rs  sms_campaigns_api.rs  smtp_api.rs  transactional_sms_api.rs  webhooks_api.rs
src/models/: ab_test_campaign_result.rs  ab_test_campaign_result_clicked_links.rs  ab_test_campaign_result_statistics.rs  ab_test_version_clicks_inner.rs  ab_test_version_stats.rs  add_child_domain.rs  add_contact_to_list.rs  add_credits.rs  block_domain.rs  (+196 more)
