[package]
name = "sendinblue-v3"
version = "3.2.0"
authors = ["Ernestas Poskus <ernestas.poskus@gmail.com>"]
description = "SendinBlue provide a RESTFul API that can be used with any languages. With this API, you will be able to :   - Manage your campaigns and get the statistics   - Manage your contacts   - Send transactional Emails and SMS   - and much more...  You can download our wrappers at https://github.com/orgs/sendinblue  **Possible responses**   | Code | Message |   | :-------------: | ------------- |   | 200  | OK. Successful Request  |   | 201  | OK. Successful Creation |   | 202  | OK. Request accepted |   | 204  | OK. Successful Update/Deletion  |   | 400  | Error. Bad Request  |   | 401  | Error. Authentication Needed  |   | 402  | Error. Not enough credit, plan upgrade needed  |   | 403  | Error. Permission denied  |   | 404  | Error. Object does not exist |   | 405  | Error. Method not allowed  |   | 406  | Error. Not Acceptable  | "
license = "MIT"
edition = "2018"
homepage = "https://github.com/ernestas-poskus/sendinblue-v3"
documentation = "https://docs.rs/sendinblue-v3"
repository = "https://github.com/ernestas-poskus/sendinblue-v3"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "multipart", "rustls-tls", "hickory-dns"]
